VPEX-68: To ensure the correct video quality, modifications have been applied to display video chat on parent window and disallow the use of popup in these versions of chrome browser. Chrome 61 and recent versions had enforced security issues and they have applied changes which affect third party libraries.
* js/customvideo.js:    	Added validation to detect if remote video control is for Chrome or other browser.
* style/video_chat.css: 	Added styles to correct video chat display on Chrome 61.
* style/waiting_room.css: 	Added styles to display video chat in Chrome 61 to cover the browser.
* video_chat.php:			Modifications applied to have custom controls to video chat in Chrome 61.
* waiting_room.php:			Added function to detect browser and its version.
* js/video_chat_chrome.js:	Created file to manage video chat functions in Chrome 61.
* js/waiting_room.js:		Removed waiting room images in Chrome 61 to display video chat buttons.

--- a/style/video_chat.css
+++ b/style/video_chat.css
@@ -25,7 +25,7 @@
 	position: relative;
 	width: 100%;
 }
-#remoteVideo:-webkit-full-screen, #remoteVideo:mozFullScreen,#localVideo:mozFullScreen, .fancybox-inner:-webkit-full-screen, .fancybox-wrap:-webkit-full-screen, .fancybox-wrap, .fancybox-wrap {
+#remoteVideo:-webkit-full-screen, #remoteVideoChrome:mozFullScreen,#remoteVideo:mozFullScreen,#localVideo:mozFullScreen, .fancybox-inner:-webkit-full-screen, .fancybox-wrap:-webkit-full-screen, .fancybox-wrap, .fancybox-wrap {
   width: 100% !important;
   height: 100% !important;
   position: fixed !important;
@@ -391,4 +391,112 @@ video::-webkit-media-controls-enclosure {
 }
 .forChrome {
     top: 12% !important;
+}
+
+
+.custom-videoChrome {
+  width: 100%;
+  background-color: white;
+}
+
+.custom-videChromeo::full-screen {
+  width: 100%;
+  height: 100%;
+}
+
+::-moz-full-screen .custom-videoChrome {
+  width: 100%;
+  height: 100%;
+}
+
+.custom-videoChrome::-moz-full-screen {
+  width: 100%;
+  height: 100%;
+}
+
+.custom-videoChrome::-webkit-full-screen {
+  width: 100%;
+  height: 100%;
+}
+#custom-videoChrome > .buttons {
+	bottom: 10px;
+	height: 50px;
+	left: 41%; /*29%;*/
+	position: absolute;
+	width: 150px; /*350px;*/
+	z-index: 2147483647;
+}
+#custom-videoChrome > .buttons > #answerButton, 
+#custom-videoChrome > .buttons > #declineButton {
+	background: #d63826 url('/img/phone.png') no-repeat center;
+	background-size: 30px;
+	border-radius: 50px;
+	cursor: pointer;
+	display: block;
+	float: left;
+	height: 50px;
+	margin: 0;
+	position: relative;
+	width: 50px;
+	-moz-border-radius:50px;
+    -webkit-border-radius:50px; 
+}
+#custom-videoChrome > .buttons > #answerButton {
+	background-color: #2b8c36;
+	margin-right: 50px;
+}
+#custom-videoChrome > .buttons > #declineButton {
+    -webkit-transform: rotate(130deg);
+    -moz-transform: rotate(130deg);
+    -ms-transform: rotate(130deg);
+    -o-transform: rotate(130deg);
+    transform: rotate(130deg);
+    /*margin-right: 50px;*/
+}
+#custom-videoChrome > .buttons > #muteButton {
+	background: #d63826 url('/img/soundw.png') no-repeat center;
+	background-size: 40px;
+	border-radius: 50px;
+	cursor: pointer;
+	display: block;
+	float: left;
+	height: 50px;
+	margin: 0 50px 0 0;
+	position: relative;
+	width: 50px;
+	-moz-border-radius:50px;
+    -webkit-border-radius:50px; 
+}
+#custom-videoChrome > .buttons > #fullscreenButton {
+	background: #d63826 url('/img/fullscreenw.png') no-repeat center;
+	background-size: 30px;
+	border-radius: 50px;
+	cursor: pointer;
+	display: block;
+	float: left;
+	height: 50px;
+	margin: 0;
+	position: relative;
+	width: 50px;
+	-moz-border-radius:50px;
+    -webkit-border-radius:50px; 
+}
+#remoteVideoChrome { 
+  position: absolute;
+  top: 110px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+ 
+}
+@media (min-aspect-ratio: 16/9) {
+  #remoteVideoChrome { height: 90%; top:  110px;}
+}
+@media (max-aspect-ratio: 16/9) {
+  #remoteVideoChrome { width: 100%; }
+}
+@supports (object-fit: cover) {
+  #remoteVideoChrome {
+    object-fit: cover;
+  }
 }
