--- a/style/waiting_room.css
+++ b/style/waiting_room.css
@@ -122,3 +122,13 @@ body {
         width: 90% !important;
     }
 }
+
+.mainChrome {
+  
+    height: 80%;
+    max-height: 80%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
